# ghost-gallery

./: .clang-format  .gitignore  CMakeLists.txt  README.md  credits.txt  flake.nix  result
include/component/: collision-shape.h  score-component.h
include/entity/: candy-collectable.h  coin-collectable.h  collectable.h  enemy.h  entity.h  heart-collectable.h  player.h
include/game-state/: gamestate-base.h  gamestate-gameplay.h  gamestate-splash.h
include/manager/: audio-manager.h  game-manager.h  spawn-manager-collectable.h  spawn-manager-enemy.h  spawn-manager.h  window-manager.h
include/ui/: ui-gameplay.h  ui-splash.h  ui.h
include/util/: random-generation.h
src/: audio-manager.cpp  audio-manager.h  collision-shape.cpp  collision-shape.h  damage-component.cpp  damage-component.h  entity.cpp  entity.h  game-manager.cpp  game-manager.h  game-ui.cpp  game-ui.h  health-component.cpp  health-component.h  heart-collectable.cpp  heart-collectable.h  image-sprite.cpp  image-sprite.h  input-handler.cpp  input-handler.h  inputhandler.cpp  main.cpp  player.cpp  player.h  random-generation.cpp  random-generation.h  score-manager.cpp  score-manager.h  spawn-manager.cpp  spawn-manager.h  text-render.cpp  text-render.h  tick-manager.cpp  tick-manager.h  window.cpp  window.h
src/entities/: coin-collectable.cpp  coin-collectable.h  enemy.cpp  enemy.h  entity.cpp  entity.h  heart-collectable.cpp  heart-collectable.h  player.cpp  player.h
src/entities/collectable/: candy-collectable.cpp  candy-collectable.h  coin-collectable.cpp  coin-collectable.h  collectable.cpp  collectable.h  heart-collectable.cpp  heart-collectable.h
src/entities/components/: damage-component.cpp  damage-component.h  health-component.cpp  health-component.h  movement-component.cpp  movement-component.h  positional-component.cpp  positional-component.h  score-component.cpp  score-component.h  tick-component.cpp  tick-component.h  user-input-component.cpp  user-input-component.h
src/game-manager/: audio-manager.cpp  game-manager.cpp
src/game-state/: gamestate-base.cpp  gamestate-gameplay.cpp  gamestate-splash.cpp
src/gamestate/: gamestate-base.cpp  gamestate-base.h  gamestate-gameplay.cpp  gamestate-gameplay.h  gamestate-splash.cpp  gamestate-splash.h
src/manager/: game-manager.cpp  window-manager.cpp
src/spawner/: spawn-manager-collectable.cpp  spawn-manager-collectable.h  spawn-manager-enemy.cpp  spawn-manager-enemy.h  spawn-manager.cpp  spawn-manager.h
src/ui/: ui-gameplay.cpp  ui-gameplay.h  ui-splash.cpp  ui-splash.h  ui.cpp  ui.h
src/util/: random-generation.cpp  random-generation.h  utils.h
